Fixed bug #43498 (file_exists() on a proftpd server got SIZE not allowed in ASCII mode). # Original patch by crrodriguez at suse dot de